# rustydo

./: Cargo.toml  README.md  todos.xlsx
src/: ai.rs  args.rs  colors.rs  configs.rs  database.rs  main.rs  mod.rs  modals.rs  ui.rs  xls.rs
src/arguments/: add_todo.rs  delete_todo.rs  mod.rs  models.rs  print.rs  update_todo.rs
src/data/: mod.rs
