[package]
name = "rustydo"
version = "0.1.0"
edition = "2024"

[dependencies]
colored = "3.0"
ratatui = "0.29"
crossterm = "0.29"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4", features = ["derive"] }
chrono = "0.4"
directories = "6"
rusqlite = "0.37"
toml = "0.9"
anyhow = "1"
reqwest = { version = "0.12", features = ["json"] }
xlsxwriter = "0.6"
